# mao-chiang-wisdom-skills

./: .gitattributes  .gitignore  README.md  pyproject.toml
debate_arena/: README.md  __init__.py  cli.py  config.py  envfile.py  errors.py  llm_client.py  loader.py  models.py  orchestrator.py  prompting.py  render.py
debate_arena/examples/: .env.example  sample_config.yaml  sample_output.md
debate_arena/prompts/: __init__.py  clerk.md  cross_examiner.md  debater.md  fact_checker.md  judge.md  moderator.md  skill_profiler.md  topic_generator.md
debate_arena/schemas/: debate_plan.schema.json  debate_turn.schema.json  fact_check.schema.json  judge_report.schema.json  skill_profile.schema.json
debates/mao-vs-chiang/: README.md  formal-debate-2026-05-17.md  free-dialogue-2026-05-19.md  free-dialogue-prompt.md  provenance.json
debates/mao-vs-chiang/inputs/2026-05-17/skill-a-chiang-kai-shek/: SKILL.md
debates/mao-vs-chiang/inputs/2026-05-17/skill-b-mao-zedong/: SKILL.md
evaluations/: README.md
evaluations/chiang-kai-shek/: artifact-facts.json  initial-evaluation.md  runtime-dialogue-test.md  runtime-evaluation.md  runtime-judgment.json  scorecard.json
evaluations/mao-zedong/: artifact-facts.json  dilogue_test_opus4.6.md  initial-evaluation.md  runtime-dialogue-test.md  runtime-evaluation.md  runtime-judgment.json  scorecard.json
skills/chiang-kai-shek-wisdom/: SKILL.md
skills/mao-zedong-wisdom/: SKILL.md
tests/: test_debate_arena.py
