[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mao-chiang-wisdom-skills"
version = "0.2.0"
description = "Mao and Chiang wisdom skills with a reusable two-skill Debate Arena."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = []

[project.scripts]
debate-arena = "debate_arena.cli:main"

[tool.setuptools.packages.find]
include = ["debate_arena*"]

[tool.setuptools.package-data]
debate_arena = [
  "README.md",
  "examples/*",
  "prompts/*.md",
  "schemas/*.json",
]
